--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.1.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
+    "@angular/material": "^17.1.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.10",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "ngx-webstorage-service": "^5.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
